src/styles/pages/_home.scss
.hero {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;

  &__container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 90dvh;
    width: 90vw;
    background: radial-gradient(75% 25% at 50% 100%, #082078 0%, hsl(224, 65%, 5%) 100%);
    border-radius: 64px;

    @media screen and (max-width: 768px) {
      width: 100vw;
      height: 100vh;
      border-radius: 0;
    }
  }

  &__h1 {
    color: #d8e3ec;
    font-feature-settings: "ss01" on;
    font-family: Lexend;
    font-size: $h1-size;
    font-style: normal;
    font-weight: 900;
    line-height: 90%;
    letter-spacing: -2%;
    margin: 0;
    margin-bottom: clamp(2rem, 1rem + 3.3333vw, 4rem);
    text-align: center;
    width: 90%;
  }

  &__span {
    background: linear-gradient(90deg, #72bce1 0%, #4d8ceb 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: $p-size;
    font-family: Lexend;
  }
}

.work {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;

  &__container {
    display: flex;
    flex-direction: column;
    width: 50vw;
    padding: 2rem;
    border-radius: 64px;
    border: 2px solid rgba(91, 106, 118, 0.5);
    background: #07203451;
    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
      inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
    backdrop-filter: blur(20px);
    overflow: hidden;

    @media screen and (max-width: 768px) {
      width: 100%;
      padding: 1rem;
    }
  }

  &__h2 {
    color: #d8e3ec;
    font-feature-settings: "ss01" on;
    font-family: Lexend;
    font-size: $h2-size;
    font-style: normal;
    font-weight: 900;
    line-height: 110%;
    letter-spacing: 2%;
    margin: 0;
    margin-bottom: 64px;
    text-align: center;

    @media screen and (max-width: 768px) {
      margin-bottom: 32px;
    }
  }

  &__cards {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    flex-wrap: wrap;
  }



  &__card {
    max-width: 25vw;
    height: 80%;
    padding: 1rem;
    border-radius: 48px;
    border: 2px solid rgba(91, 106, 118, 0.5);
    background: rgba(43, 59, 73, 0.35);
    backdrop-filter: blur(20px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 5rem;
    color: $text-color;
    transition: all 0.3s ease;

    @media screen and (max-width: 768px) {
      border-radius: 24px;
      max-width: 50%;
      width: 50%;
      gap: 1rem;
      height: auto;
    }

    @media screen and (max-width: 480px) {
      max-width: 100%;
      width: 100%;
    }

    &:hover {
      background: rgba(43, 59, 73, 0.50);
    }

    &-img {
      width: 100%;
      aspect-ratio: 16 / 9;
      border-radius: 32px;
      background-color: $text-color;

      @media screen and (max-width: 768px) {
        border-radius: 8px;
        width: 50%;
      }
    }

    &-title {
      display: flex;
      justify-content: space-between;
      align-items: center;

      @media screen and (max-width: 768px) {
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
        gap: 0.5rem;
      }
    }

    &-h3,
    &-year {
      font-size: $h3-size;
      margin: 0;
      font-weight: 700;
      color: $text-color;
    }

    &-year {
      font-weight: 300;
    }

    &--top {
      display: flex;
      gap: 1rem;
      flex-direction: column;

      @media screen and (max-width: 768px) {
        flex-direction: row;
      }
    }

    &-links {
      display: flex;
      justify-content: center;
      gap: 1rem;
      width: 100%;

      @media screen and (max-width: 768px) {
        gap: .5rem;
      }

      a {
        white-space: nowrap;
        text-align: center;
        width: 100%;
        height: 100%;
        text-decoration: none;
        color: $text-color;
        font-size: $nav-size;
        transition: all 0.3s ease;
        padding: 1rem;
        border-radius: 32px;
        border: 1px solid rgba(216, 227, 236, 0.50);
        background: rgba(33, 40, 46, 0.10);
        box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25) inset;
        backdrop-filter: blur(10px);

        &:hover {
          background: rgba(33, 40, 46, 0.75);
        }

        @media screen and (max-width: 768px) {
          padding: 0.5rem;
        }
      }
    }
  }

}

.about {
  &__container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 50vw;
    padding: 2rem;
    border-radius: 64px;
    border: 2px solid rgba(91, 106, 118, 0.5);
    background: #07203451;
    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25),
      inset 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
    backdrop-filter: blur(20px);
    margin-top: -100px; // Adjust as needed
    margin-bottom: -100px; // Adjust as needed
    overflow-x: hidden;

    @media screen and (max-width: 768px) {
      width: 90vw;
      padding: 1rem;
      margin-top: -50px; // Adjust for smaller screens
      margin-bottom: -50px; // Adjust for smaller screens
    }
  }
}

